infra/k8s/contact-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contacts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contacts
  template:
    metadata:
      labels:
        app: contacts
    spec:
      containers:
        - name: contacts
          image: joanv/contacts
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: contacts-srv
spec:
  selector:
    app: contacts
  ports:
    - name: contacts
      protocol: TCP
      port: 3000
      targetPort: 3000
